--- a/ex13/src/index.html
+++ b/ex13/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
-
-        <iframe src="https://www.youtube.com/embed/jhzpbWwo7hY" title="Sign Up to GitHub"></iframe>
-    </body>
+  <head></head>
+  <body>
+    <iframe
+      src="https://www.youtube.com/embed/jhzpbWwo7hY"
+      title="Sign Up to GitHub"></iframe>
+  </body>
 </html>
