--- a/ex13/src/index.html
+++ b/ex13/src/index.html
@@ -3,7 +3,6 @@
   <head></head>
   <body>
     <iframe
-      src="https://www.youtube.com/embed/jhzpbWwo7hY"
-      title="Sign Up to GitHub"></iframe>
+      src="https://www.youtube.com/embed/jhzpbWwo7hY" title="Sign Up to GitHub"></iframe>
   </body>
 </html>
